manifest/postgres.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wasp-dev-db
  namespace: florian-ns
  labels:
    app: wasp-dev-db-opensaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasp-dev-db
  template:
    metadata:
      labels:
        app: wasp-dev-db
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          terminationMessagePolicy: File
          image: 'postgres:latest'
      securityContext:
        runAsUser: 0
